syntax = "proto3";

option csharp_namespace = "PhotonRoomListGrpcService";

package photonroom;

service ReportPhotonRoom {
  rpc RequestRoomList (RoomListRequest) returns (RoomListReply);
}

message RoomListRequest {
  string region = 1;
}

message RoomListReply {
  string region = 1;
  map<string, int32> count = 2;
}
